Fixed styling recordings page

--- a/_includes/recordings.html
+++ b/_includes/recordings.html
@@ -1,21 +1,31 @@
 <div class="small-wrapper">
-	This page lists some recordings of conference talks, interviews and web casts that I was involved in.
-	<p>
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/lGQ5Eb4_1ro" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/gxuUBDR10dE" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/iWj-t69EdN4" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/n3JElWseNSg" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/JzgBkodsFsM" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/QzFa4dRkz-Q" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/xV84r_96V7Y" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="750" src="https://www.youtube.com/embed/i8TDt7cUG3k" frameborder="0" allowfullscreen></iframe>
-	<p>
-	<iframe width="1280" height="750" src="https://www.youtube.com/embed/B0N9OOzlGt4" frameborder="0" allowfullscreen></iframe>
+  <div class="recordings-container">
+    <section class="recordings-header">
+      <div class="author-image-container">
+        <img src="{{site.baseurl}}/assets/img/{% if site.author-pic %}{{site.author-pic}}{% endif %}" alt="{{site.author}}">
+      </div>
+      <p class="subtitle">{{site.about-author}}</p>
+    </section>
+    <section class="recordings-body">
+      This page lists some recordings of conference talks, interviews and web casts that I was involved in.
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/lGQ5Eb4_1ro" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/gxuUBDR10dE" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/iWj-t69EdN4" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/n3JElWseNSg" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/JzgBkodsFsM" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/QzFa4dRkz-Q" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/xV84r_96V7Y" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="750" src="https://www.youtube.com/embed/i8TDt7cUG3k" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="750" src="https://www.youtube.com/embed/B0N9OOzlGt4" frameborder="0" allowfullscreen></iframe>
+    </section> <!-- End Recordings Body-->
+  </div> <!-- End Recordings Container -->
 </div> <!-- End Small Wrapper -->
