--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1576,6 +1576,86 @@ pre code {
   color: #311e3e;
 }
 
+/* = = = = = = = = = = Recordings Page Styles = = = = = = = = = = */
+.small-wrapper {
+  width: 700px;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.recordings-container {
+  margin: 100px 0 100px;
+}
+
+.recordings-header {
+  position: relative;
+  text-align: center;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+.recordings-header:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: block;
+  height: 1px;
+  width: 80px;
+  background-color: #311e3e;
+}
+
+.recordings-header .author-image-container {
+  width: 100px;
+  height: 100px;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+  overflow: hidden;
+  margin: 0 auto 30px;
+}
+
+.recordings-header .subtitle {
+  color: #311e3e;
+  font-weight: 300;
+  margin: 0;
+}
+
+.recordings-body .contact-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.recordings-body .contact-list li {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.recordings-body .contact-list li:first-child {
+  margin-left: 0;
+}
+
+.recordings-body .contact-list li a {
+  display: block;
+  color: #999999;
+  font-size: 21px;
+  text-decoration: none;
+  padding: 5px;
+  -webkit-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
+  transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
+}
+
+.recordings-body .contact-list li a:hover {
+  color: #87314e;
+  -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
 /* = = = = = = = = = = Animate Styles = = = = = = = = = = */
 .main-header,
 .page-image,
