Adjusted external-url image size and position

--- a/assets/css/sass/parts/_post-card.scss
+++ b/assets/css/sass/parts/_post-card.scss
@@ -71,7 +71,9 @@
   
   .external-url {
     position: absolute;
-    right: 5%;
-    top: 5%;
+    right: 20px;
+    top: 18px;
+    width:30px;
+    height:30px;
   }
 }
