--- a/_includes/recordings.html
+++ b/_includes/recordings.html
@@ -9,7 +9,7 @@
     <section class="recordings-body">
       This page lists some recordings of conference talks, interviews and web casts that I was involved in.
       <p>
-      <iframe width="1280" height="720" src="https://www.youtube.com/embed/lGQ5Eb4_1ro" frameborder="0" allowfullscreen></iframe>
+      <iframe width="1280" height="750" src="https://www.youtube.com/embed/bn9-GpnwGkI" frameborder="0" allowfullscreen></iframe>
       <p>
       <iframe width="1280" height="720" src="https://www.youtube.com/embed/gxuUBDR10dE" frameborder="0" allowfullscreen></iframe>
       <p>
@@ -26,6 +26,8 @@
       <iframe width="1280" height="750" src="https://www.youtube.com/embed/i8TDt7cUG3k" frameborder="0" allowfullscreen></iframe>
       <p>
       <iframe width="1280" height="750" src="https://www.youtube.com/embed/B0N9OOzlGt4" frameborder="0" allowfullscreen></iframe>
+      <p>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/lGQ5Eb4_1ro" frameborder="0" allowfullscreen></iframe>
     </section> <!-- End Recordings Body-->
   </div> <!-- End Recordings Container -->
 </div> <!-- End Small Wrapper -->
