Added GitLab Commit talk

--- a/_includes/recordings.html
+++ b/_includes/recordings.html
@@ -11,6 +11,8 @@
       <p>
       <iframe width="1280" height="750" src="https://www.youtube.com/embed/_Ccz7SV23dk" frameborder="0" allowfullscreen></iframe>
       <p>
+      <iframe width="1280" height="750" src="https://www.youtube.com/embed/lChTZop8OY4" frameborder="0" allowfullscreen></iframe>
+      <p>
       <iframe width="1280" height="750" src="https://www.youtube.com/embed/LZIKzjLQBFo" frameborder="0" allowfullscreen></iframe>
       <p>
       <iframe width="1280" height="750" src="https://www.youtube.com/embed/uB35m60GAZw" frameborder="0" allowfullscreen></iframe>
